Fixes vertical alignment of caps lock and show/hide icons in input fields

--- a/public_html/styles/application.css
+++ b/public_html/styles/application.css
@@ -169,6 +169,7 @@ main > div > div > form > div > span.show::after, main > div > div > form > div 
 	text-align: center;
 	max-height: 100%;
 	display: inline-block;
+	line-height: normal;
 }
 
 main > div > div > form > div > span.show.conceal::after {
